--- a/app/src/main/res/values-eu/strings.xml
+++ b/app/src/main/res/values-eu/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <!-- HTTP ERRORS -->
     <string name="http_generic_error">Serbitzariarekin arazo bat aurkitu da, mesedez, geroago saiatu</string>
+    <!-- menu -->
+    <string name="search">bilatu</string>
 </resources>
