--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <!-- HTTP ERRORS -->
     <string name="http_generic_error">Hubo un problema al realizar la petición http, intentalo de nuevo más tarde</string>
+    <!-- menu -->
+    <string name="search">buscar</string>
 </resources>
