--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <!-- HTTP ERRORS -->
     <string name="http_generic_error">There was an error trying to request data from the server, please try again later</string>
+    <!-- menu -->
+    <string name="search">search</string>
 </resources>
